# Proton-on-Gnome-Online-Accounts

./: .gitignore  .gitmodules  PROJECT_DESIGN.md  README.md  install.sh  meson.build  uninstall.sh
data/: meson.build
packaging/fedora/: proton-goa.spec
packaging/opensuse/: _service  proton-goa.spec
src/: meson.build
src/goabackend/: goa-proton-provider.h  goaprotonauth.c  goaprotonauth.h  goaprotoncalendarprovider.c  goaprotoncalendarprovider.h  goaprotondriveprovider.c  goaprotondriveprovider.h  goaprotonmailprovider.c  goaprotonmailprovider.h  goaprovider-priv.h  goaproviderdialog.h  meson.build
